--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,145 @@ section{
   padding:30px 0;
 }
 
+/* ===== REGISTER DESIGN ===== */
+
+.height-100 {
+  height: 500px;
+}
+
+.sidebar {
+  position: relative;
+  overflow: hidden;
+}
+
+.chart-design {
+  list-style: none;
+}
+
+.chart-design li:nth-child(1) {
+  position: absolute;
+  top: 10px;
+  height: 100px;
+  width: 100px;
+  background-color: #b7c2d4;
+  border-radius: 100% 0% 0% 100% / 0% 56% 44% 100%;
+  opacity: 0.4;
+}
+
+.chart-design li:nth-child(2) {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  transform: rotate(-10deg);
+  height: 70px;
+  width: 70px;
+  background-color: #000;
+  border-radius: 100% 0% 0% 100% / 0% 56% 44% 100%;
+  opacity: 0.4;
+}
+
+.chart-design li:nth-child(3) {
+  position: absolute;
+  bottom: 0px;
+  left: 200px;
+  transform: rotate(-10deg);
+  height: 150px;
+  width: 150px;
+  background-color: #000;
+  border-radius: 100% 0% 0% 100% / 0% 56% 44% 100%;
+  opacity: 0.4;
+}
+
+.chart-design li:nth-child(4) {
+  position: absolute;
+  bottom: 0px;
+  left: 10px;
+  transform: rotate(-10deg);
+  height: 150px;
+  width: 150px;
+  background-color: #000;
+  border-radius: 50%;
+  opacity: 0.4;
+}
+
+.chart-design li:nth-child(5) {
+  position: absolute;
+  bottom: 0px;
+  right: 10px;
+  transform: rotate(-10deg);
+  height: 70px;
+  width: 70px;
+  background-color: #000;
+  border-radius: 50%;
+  opacity: 0.7
+}
+
+.chart-design li:nth-child(6) {
+  position: absolute;
+  top: 120px;
+  left: 40%;
+  transform: rotate(-10deg);
+  height: 200px;
+  width: 200px;
+  background-color: #000;
+  border-radius: 50%;
+  opacity: 0.2;
+}
+
+.form-data {
+  width: 100%;
+  margin-bottom: 10px
+}
+
+.main-heading {
+  font-size: 30px;
+}
+
+.form-data label {
+  font-size: 13px;
+  margin-left: 2px;
+}
+
+.form-data input {
+  height: 50px;
+  border: 2px solid #eee;
+  transition: all 1s;
+  border-radius: 5px;
+}
+
+.form-data input:focus {
+  outline: none;
+  border: 2px solid #000;
+  box-shadow: none;
+}
+
+.social-list {
+  list-style: none;
+  display: flex;
+}
+
+.social-list li {
+  margin: 5px;
+  width: 500px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  cursor: pointer;
+  color: #000;
+}
+
+.forgot-text {
+  color: blue;
+}
+
+.signin-btn .btn {
+  width: 100%;
+  height: 46px;
+  margin-top: 10px;
+}
+
 /* ===== BACK TO TOP ===== */
 
 .top {
